--- a/MongoDB/json_file_creation.ipynb
+++ b/MongoDB/json_file_creation.ipynb
@@ -381,6 +381,275 @@
     "with open('activities.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(activities, f, indent=4, ensure_ascii=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29d1fc02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import json\n",
+    "import ast\n",
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
+    "def get_oid_string(int_id):\n",
+    "    return f\"{int_id:024x}\"\n",
+    "\n",
+    "\n",
+    "def format_date(date_str):\n",
+    "    \"\"\"\n",
+    "    Converts a date string into the MongoDB Extended JSON Date format: {\"$date\": \"...\"}\n",
+    "    \"\"\"\n",
+    "    if not date_str:\n",
+    "        return None\n",
+    "    date_formats = [\"%Y-%m-%d %H:%M:%S\", \"%Y-%m-%d\"]\n",
+    "    for fmt in date_formats:\n",
+    "        try:\n",
+    "            dt = datetime.strptime(date_str, fmt)\n",
+    "            return {\"$date\": dt.strftime(\"%Y-%m-%dT%H:%M:%SZ\")}\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# 1. users.json\n",
+    "# --------------------------------------------------------------------\n",
+    "users = {}\n",
+    "\n",
+    "with open('../users.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        user_id = int(row['user_id'])\n",
+    "        users[user_id] = {\n",
+    "            \"_id\": {\"$oid\": get_oid_string(user_id)},\n",
+    "            \"user_id\": user_id,\n",
+    "            \"username\": row['username'],\n",
+    "            \"country\": row['country'],\n",
+    "            \"join_date\": format_date(row['join_date']),\n",
+    "            \"is_commercial\": int(row.get('is_commercial', 0)),\n",
+    "            \"joined_groups\": [],\n",
+    "            \"created_posts\": []\n",
+    "        }\n",
+    "\n",
+    "with open('../group_joins.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        user_id = int(row['user_id'])\n",
+    "        group_id = int(row['group_id'])\n",
+    "        if user_id in users:\n",
+    "            users[user_id][\"joined_groups\"].append({\n",
+    "                \"group_id\": {\"$oid\": get_oid_string(group_id)},\n",
+    "                \"joined_at\": format_date(row['join_date'])\n",
+    "            })\n",
+    "\n",
+    "with open('../user_shares_posts_fixed.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        user_id = int(row['user_id'])\n",
+    "        post_id = int(row['post_id'])\n",
+    "        if user_id in users:\n",
+    "            users[user_id][\"created_posts\"].append({\"$oid\": get_oid_string(post_id)})\n",
+    "\n",
+    "with open('users.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(list(users.values()), f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# 2. groups.json\n",
+    "# --------------------------------------------------------------------\n",
+    "groups = {}\n",
+    "\n",
+    "with open('../groups.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        group_id = int(row['group_id'])\n",
+    "        groups[group_id] = {\n",
+    "            \"_id\": {\"$oid\": get_oid_string(group_id)},\n",
+    "            \"group_id\": group_id,\n",
+    "            \"name\": row['group_name'],\n",
+    "            \"country\": row['group_country'],\n",
+    "            \"creator\": {\"$oid\": get_oid_string(int(row['creator_id']))},\n",
+    "            \"creation_date\": format_date(row['creation_date']),\n",
+    "            \"posts\": [],\n",
+    "            \"last_activity\": {\"$date\": \"1970-01-01T00:00:00Z\"}\n",
+    "        }\n",
+    "\n",
+    "# Default/main group\n",
+    "if 0 not in groups:\n",
+    "    groups[0] = {\n",
+    "        \"_id\": {\"$oid\": \"000000000000000000000000\"},\n",
+    "        \"group_id\": 0,\n",
+    "        \"name\": \"Main Page (Default)\",\n",
+    "        \"country\": None,\n",
+    "        \"creator\": None,\n",
+    "        \"creation_date\": format_date(\"2020-01-01\"),\n",
+    "        \"posts\": [],\n",
+    "        \"last_activity\": {\"$date\": \"2023-01-01T00:00:00Z\"}\n",
+    "    }\n",
+    "\n",
+    "# Posts per group\n",
+    "try:\n",
+    "    with open('../post_in_group_fixed.csv', 'r', encoding='utf-8') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for row in reader:\n",
+    "            clean_group_id = row['group_id'].strip(\"[]\")\n",
+    "            clean_post_id = row['post_id'].strip(\"[]\")\n",
+    "\n",
+    "            if clean_group_id and clean_post_id:\n",
+    "                gid = int(clean_group_id)\n",
+    "                pid = int(clean_post_id)\n",
+    "                if gid in groups:\n",
+    "                    post_oid = {\"$oid\": get_oid_string(pid)}\n",
+    "                    if post_oid not in groups[gid][\"posts\"]:\n",
+    "                        groups[gid][\"posts\"].append(post_oid)\n",
+    "except FileNotFoundError:\n",
+    "    pass\n",
+    "\n",
+    "# last_activity from group joins\n",
+    "with open('../group_joins.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        group_id = int(row['group_id'])\n",
+    "        if group_id in groups:\n",
+    "            join_date_iso = format_date(row['join_date'])\n",
+    "            if join_date_iso and join_date_iso[\"$date\"] > groups[group_id][\"last_activity\"][\"$date\"]:\n",
+    "                groups[group_id][\"last_activity\"] = join_date_iso\n",
+    "\n",
+    "with open('groups.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(list(groups.values()), f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# 3. posts.json\n",
+    "# --------------------------------------------------------------------\n",
+    "posts = {}\n",
+    "\n",
+    "with open('../posts.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        post_id = int(row['post_id'])\n",
+    "        aid = int(float(row['activity_id'])) if row['activity_id'] else None\n",
+    "        activity_ref = {\"$oid\": get_oid_string(aid)} if aid is not None else None\n",
+    "\n",
+    "        posts[post_id] = {\n",
+    "            \"_id\": {\"$oid\": get_oid_string(post_id)},\n",
+    "            \"post_id\": post_id,\n",
+    "            \"text\": row['text'],\n",
+    "            \"activity\": activity_ref,\n",
+    "            \"photo_id\": int(float(row['photo_id'])) if row['photo_id'] else None,\n",
+    "            \"user\": None,      # will be filled from user_shares_posts\n",
+    "            \"group\": None,     # will be filled from post_in_group_fixed\n",
+    "            \"created_at\": None,\n",
+    "            \"tags\": []         # will be filled from tags.csv\n",
+    "        }\n",
+    "\n",
+    "# creator + created_at\n",
+    "with open('../user_shares_posts_fixed.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        post_id = int(row['post_id'])\n",
+    "        user_id = int(row['user_id'])\n",
+    "        if post_id in posts:\n",
+    "            posts[post_id][\"created_at\"] = format_date(row['created_at'])\n",
+    "            posts[post_id][\"user\"] = {\"$oid\": get_oid_string(user_id)}\n",
+    "\n",
+    "# group per post\n",
+    "try:\n",
+    "    with open('../post_in_group_fixed.csv', 'r', encoding='utf-8') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for row in reader:\n",
+    "            post_id = int(row['post_id'])\n",
+    "            clean_group_id = row['group_id'].strip(\"[]\")\n",
+    "            if clean_group_id and post_id in posts:\n",
+    "                gid = int(clean_group_id)\n",
+    "                posts[post_id][\"group\"] = {\"$oid\": get_oid_string(gid)}\n",
+    "except FileNotFoundError:\n",
+    "    pass\n",
+    "\n",
+    "# tags per post (list of user_ids)\n",
+    "try:\n",
+    "    with open('../tags.csv', 'r', encoding='utf-8') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for row in reader:\n",
+    "            post_id = int(row['post_id'])\n",
+    "            if post_id in posts:\n",
+    "                raw_tags = row['tags']\n",
+    "                if raw_tags and raw_tags != \"[]\":\n",
+    "                    try:\n",
+    "                        tag_ids = ast.literal_eval(raw_tags)\n",
+    "                        posts[post_id][\"tags\"] = [\n",
+    "                            {\"$oid\": get_oid_string(int(uid))}\n",
+    "                            for uid in tag_ids\n",
+    "                        ]\n",
+    "                    except (SyntaxError, ValueError):\n",
+    "                        posts[post_id][\"tags\"] = []\n",
+    "except FileNotFoundError:\n",
+    "    pass\n",
+    "\n",
+    "# keep only posts with timestamp\n",
+    "valid_posts = [p for p in posts.values() if p[\"created_at\"] is not None]\n",
+    "\n",
+    "with open('posts.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(valid_posts, f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# 4. activities.json\n",
+    "# --------------------------------------------------------------------\n",
+    "activities = []\n",
+    "\n",
+    "country_map = {\n",
+    "    \"Czech Republic\": \"cz\", \"Germany\": \"de\",\n",
+    "    \"Poland\": \"pl\", \"United States\": \"us\"\n",
+    "}\n",
+    "\n",
+    "with open('../activities.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        activity_id = int(row['activity_id'])\n",
+    "        raw_country = row['country']\n",
+    "        clean_country = country_map.get(raw_country, raw_country)\n",
+    "\n",
+    "        activities.append({\n",
+    "            \"_id\": {\"$oid\": get_oid_string(activity_id)},\n",
+    "            \"activity_id\": activity_id,\n",
+    "            \"region\": row['region'],\n",
+    "            \"distance_m\": float(row['distance_m']),\n",
+    "            \"country\": clean_country,\n",
+    "            \"elev_per_km_m\": float(row['elev_per_km_m']),\n",
+    "            \"base_elev_m\": float(row['base_elev_m']),\n",
+    "            \"total_elev_m\": float(row['total_elev_m'])\n",
+    "        })\n",
+    "\n",
+    "with open('activities.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(activities, f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------------\n",
+    "# 5. comments.json\n",
+    "# --------------------------------------------------------------------\n",
+    "comments = []\n",
+    "\n",
+    "with open('../comments.csv', 'r', encoding='utf-8') as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        user_id = int(row['user_id'])\n",
+    "        post_id = int(row['post_id'])\n",
+    "\n",
+    "        comments.append({\n",
+    "            \"user\": {\"$oid\": get_oid_string(user_id)},\n",
+    "            \"post\": {\"$oid\": get_oid_string(post_id)},\n",
+    "            \"written_at\": format_date(row['written_at']),\n",
+    "            \"content\": row['content']\n",
+    "        })\n",
+    "\n",
+    "with open('comments.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(comments, f, indent=4, ensure_ascii=False)\n"
+   ]
   }
  ],
  "metadata": {
